loadtest-controller: refactor load test core service into orchestrators